<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Mortgage Payment Calculator" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="end"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prinicalHelpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/baseline_help_outline_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/principal_label"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/mortgage_principal_amount"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <EditText
            android:id="@+id/principalEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="8"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/principal_label" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/interestHelpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                app:srcCompat="@drawable/baseline_help_outline_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:contentDescription="TODO"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/interest_rate"
                android:textSize="20sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/interestEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="8"
            android:hint="@string/enter_the_interest"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#546E7A" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/amortizationHelpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                app:srcCompat="@drawable/baseline_help_outline_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="25dp"
                android:contentDescription="TODO"
                android:gravity="center"
                android:text="@string/amortization_period"
                android:textSize="20sp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="top" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/frequencyHelpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                app:srcCompat="@drawable/baseline_help_outline_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="25dp"
                android:contentDescription="TODO"
                android:gravity="center"
                android:text="@string/payment_frequency"
                android:textSize="20sp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/amortizationSpinner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary"
            android:text="@string/calculate" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>